Add Perfil de usuario (Inicio y Ventas)

--- a/web/index.html
+++ b/web/index.html
@@ -10,9 +10,7 @@
 
     <!--Izquierda-->
     <div>
-        <form>
-            <input type="button" class="btn izq" value="COMPRA">
-        </form>
+        <a href="/web/catalogo.html" class="btn izq" value="COMPRA">COMPRA</a>
     </div>
 
     <!--Palito del medio-->
