--- a/web/PerfilUsuario/Ventas.html
+++ b/web/PerfilUsuario/Ventas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset="utf-8">
     <title>Usuario-Ventas</title>
@@ -38,24 +38,27 @@
     <div>
         <!--Imagen del usuario-->
         <div>
-            <img src="/img/Logos/Usuario.png" width="200" height="200"/>
+            <img src="/img/Logos/Usuario.png" id="userPicture" width="200" height="200"/>
+        </div>
+        <div>
+            <button id="btnAddVenta">Añadir Venta</button>
         </div>
         <!--Fondo de los objetos-->
         <div>
             <ul>
-                <li>
-                   <p class="foto cosa">foto</p> 
-                   <p class="desc cosa">descripción</p>
-                   <div class="palo"></div>
+                <li id="Obj1">
+                    <p class="foto cosa" id="objFoto">foto</p> 
+                    <p class="desc cosa" id="objDescripcion">descripción</p>
+                    <div class="palo"></div>
                 </li>
-                <li>
-                    <div class="foto cosa">foto</div> 
-                    <div class="desc cosa">descripción</div>
+                <li id="Obj2">
+                    <div class="foto cosa" id="objFoto">foto</div> 
+                    <div class="desc cosa" id="objDescripcion">descripción</div>
                     <div class="palo"></div>
                  </li>
-                 <li>
-                    <p class="foto cosa">foto</p> 
-                    <p class="desc cosa">descripción</p>
+                 <li id="Obj3">
+                    <div class="foto cosa" id="objFoto">foto</div> 
+                    <div class="desc cosa" id="objDescripcion">descripción</div>
                     <div class="palo"></div>
                  </li>
             </ul>
