--- a/web/catalogo.html
+++ b/web/catalogo.html
@@ -8,18 +8,20 @@
 <body>
     <!--Ubicacion de cada foto-->
     <div class="padre">
-
-            <img class="imagen" src="/img/catalogo/img_prueba.webp" alt="Persona1"/>
-
-            <img class="imagen" src="/img/catalogo/Img_pruebas1.jpg" alt="Persona2"/>
-
-            <img class="imagen" src="/img/catalogo/img_prueba2.jpg" alt="Persona3"/>
-
-            <img class="rect"/>
-
-            <img class="rect"/>
-
+            <img class="imagen" src="/img/catalogo/img_prueba.webp" id="idImg1" alt="Persona1"/>
+            <img class="imagen" src="/img/catalogo/Img_pruebas1.jpg" id="idImg2" alt="Persona2"/>
+            <img class="imagen" src="/img/catalogo/img_prueba2.jpg" id="idImg3" alt="Persona3"/>
+            <img class="rect" id="idImg4"/>
+            <img class="rect" id="idImg5"/>
+    </div>
+    <div class="padre">
+        <img class="rect" id="idImg6"/>
+        <img class="rect" id="idImg7"/>
+        <img class="rect" id="idImg8"/>
+        <img class="rect" id="idImg9"/>
+        <img class="rect" id="idImg10"/>
     </div>
 
 </body>
+</html>
 <!--Insertar pie de página-->
