--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
 
     <!--Izquierda-->
     <div>
-        <a href="/web/catalogo.html" class="btn izq" value="COMPRA">COMPRA</a>
+        <a href="/web/catalogo.html" class="btn izq" id="btonCompra" value="COMPRA">COMPRA</a>
     </div>
 
     <!--Palito del medio-->
@@ -19,7 +19,7 @@
     <!--Derecha-->
     <div>
         <form>
-            <input type="button" class="btn der" value="VENTA">
+            <input type="button" class="btn der" id="btnVenta" value="VENTA">
         </form>
     </div>
 </body>
