--- a/web/PerfilUsuario/Inicio.html
+++ b/web/PerfilUsuario/Inicio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset="utf-8">
     <title>Usuario-Inicio</title>
@@ -7,9 +7,9 @@
 <header>
     <div class="header">
         <div>Nombre</div>
-        <a href="/web/PerfilUsuario/Inicio.html">Inicio</a>
-        <a href="/web/PerfilUsuario/Ventas.html">Ventas</a>
-        <a href="/web/PerfilUsuario/Compras.html">Compras</a>
+        <a href="/web/PerfilUsuario/Inicio.html" id="perfilInicio">Inicio</a>
+        <a href="/web/PerfilUsuario/Ventas.html" id="perfilVentas">Ventas</a>
+        <a href="/web/PerfilUsuario/Compras.html" id="perfilCompras">Compras</a>
     </div>
 </header>
 <body>
@@ -17,23 +17,23 @@
     <div>
         <!--Imagen del usuario-->
         <div>
-            <img src="/img/Logos/Usuario.png" width="200" height="200"/>
+            <img src="/img/Logos/Usuario.png" id="userPicture" width="200" height="200"/>
         </div>
         <!--Fondo de los datos-->
         <div>
             <!--zona de los datos-->
             <div>
-                Nombre completo<br/>
-                Edad<br/>
-                Cartera<br/>
-                Más datos1<br/>
-                Más datos2<br/>
-                Más datos3<br/>
+                <p id="userName">Nombre completo</p>
+                <p id="userAge">Edad</p>
+                <p id="userWallet">Cartera</p>
+                <p id="userData1">Más datos1</p>
+                <p id="userData2">Más datos2</p>
+                <p id="userData3">Más datos3</p>
             </div>
             <!--Zona ubicación-->
             <div>
-                Ubicación
-                <div style="background-color: grey; width: 300px; height: 300px;">
+                <p>Ubicación</p>
+                <div style="background-color: grey; width: 300px; height: 300px;" id="userUbicacion">
                     mapa
                 </div>
             </div>
