Add Zonas de la cesta
Se añadieron las opciones 1 y 2 (y 3) de la cesta y se hicieron algunos cambios

--- a/web/LogIn_SignIn.html
+++ b/web/LogIn_SignIn.html
@@ -18,8 +18,8 @@
                         INICIA SESIÓN
                     </div>
                     <form action="">
-                        <input type="text" id="logInEmail" placeholder="Dirección de e-mail"/>
-                        <input type="text" id="logInPass" placeholder="Contraseña"/>
+                        <input type="text" id="logInEmail" placeholder="Dirección de e-mail" required/>
+                        <input type="text" id="logInPass" placeholder="Contraseña" required/>
                     </form>
                     <!--Cuadrado con los logos-->
                     <div>
@@ -41,14 +41,13 @@
                         REGISTRARSE
                     </div>
                     <form>
-                        <input type="text" id="signInEmail" placeholder="Dirección de e-mail"/>
-                        <input type="text" id="signInPass" placeholder="Contraseña"/>
+                        <input type="text" id="signInEmail" placeholder="Dirección de e-mail" required/>
+                        <input type="text" id="signInPass" placeholder="Contraseña" required/>
                     </form>
                 </div>
 
                 <!--Botón para acceder-->
                 <div>
-                    <form></form>
                     <input type="submit" id="btnEnter" value="Enviar"/>
                 </div>
             </div>
