--- a/web/Pestaña Objeto/objParticular.html
+++ b/web/Pestaña Objeto/objParticular.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title id="ObjName"></title>
+    <title id="ObjName">Nombre del objeto</title>
     <link rel="stylesheet" href="/CSS/catalogo.css">
 </head>
 <body>
