Opciones de compra y CSS
Se añadió las últimas opciones de la parte de compras.
También se empezó a hacer los CSS de la parte de opciones de compra

--- a/web/Cesta/cesta.html
+++ b/web/Cesta/cesta.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>Cesta</title>
     <link rel="stylesheet" href="/CSS/catalogo.css">
+    <link rel="stylesheet" href="/CSS/cesta/cesta.css">
 </head>
+
 <body>
+    <h1>Cesta</h1>
     <!--Parte de arriba, opciones para la entrega de los productos-->
     <div>
-        <div><a href="/web/Cesta/op1.html">Recogida en tienda</a></div>
-        <div><a href="/web/Cesta/op2.html">Envio a domicilio</a></div>
-        <div><a href="/web/Cesta/op3.html">Envio a domicilio Express</a></div>
-        <div><a href="/web/Cesta/op4.html">Entrega Programada</a></div>
+        <div class="cuadro c1"><a class="txt" href="/web/Cesta/op1.html">Recogida en tienda</a></div>
+        <div class="cuadro c2"><a class="txt" href="/web/Cesta/op2.html">Envio a domicilio</a></div>
+        <div class="cuadro c3"><a class="txt" href="/web/Cesta/op3.html">Envio a domicilio Express</a></div>
+        <div class="cuadro c4"><a class="txt" href="/web/Cesta/op4.html">Entrega Programada</a></div>
     </div>
 
     <!--Parte de abajo, articulos en la cesta-->
-    <div>
-        <div>Objeto 1</div>
-        <div>Objeto 2</div>
-        <div>Objeto 3</div>
+    <div class="carrito">
+        <ul id="ariculos">
+            <li class="izq">Articulo 1</li>
+            <li class="izq">Articulo 2</li>
+            <li class="izq">Articulo 3</li>
+        </ul>
     </div>
 </body>
