--- a/web/Cesta/op1.html
+++ b/web/Cesta/op1.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>Recogida en Tienda</title>
-    <link rel="stylesheet" href="/CSS/catalogo.css">
+    <link rel="stylesheet" href="/CSS/cesta/cesta.css">
+    <link rel="stylesheet" href="/CSS/cesta/op.css">
 </head>
+
 <body>
-    <!--Fondo-->
-    <div>
-        <!--Cuadro con contenido-->
-        <div>
-            <!--Cabecera que ponga Ubicacion-->
-            <div>
-                <p>Ubicación, Código Postal, ciudad...</p>
-            </div>
+    <!--Cuadro con contenido-->
+    <div class="recuadro">
+        <!--Cabecera que ponga Ubicacion-->
+        <div class="cabecera">
+            <p class="t-cabecera">Ubicación, Código Postal, ciudad...</p>
+        </div>
 
-            <!--Cuadro izquierdo con la zona de las tiendas-->
-            <div>
-                <ul id="tiendas">
-                    <li>Tienda 1</li>
-                    <li>Tienda 2</li>
-                </ul>
-            </div>
+        <!--Cuadro izquierdo con la zona de las tiendas-->
+        <div class="tiendas">
+            <ul id="tiendas">
+                <li class="tienda">Tienda 1</li>
+                <li class="tienda">Tienda 2</li>
+            </ul>
+        </div>
 
-            <!--Cuadro derecho con el mapa-->
-            <div>
-
-            </div>
+        <!--Cuadro derecho con el mapa-->
+        <div id="mapa" class="mapa">
+            <div class="t-mapa">Mapa</div>
         </div>
     </div>
 </body>
