--- a/web/Cesta/op2.html
+++ b/web/Cesta/op2.html
@@ -42,9 +42,9 @@
         <!--Parte de abajo, articulos en la cesta-->
         <div class="carrito">
             <ul id="ariculos">
-                <li class="izq">Articulo 1</li>
-                <li class="izq">Articulo 2</li>
-                <li class="izq">Articulo 3</li>
+                <li class="izq producto">Articulo 1</li>
+                <li class="izq producto">Articulo 2</li>
+                <li class="izq producto">Articulo 3</li>
             </ul>
         </div>
     </div>
