--- a/web/Cesta/opCompraOnline.html
+++ b/web/Cesta/opCompraOnline.html
@@ -2,17 +2,23 @@
 <html lang="es">
 
 <head>
-    <title>Recogida en Tienda</title>
-    <link rel="stylesheet" href="/CSS/catalogo.css">
+    <title>Compra Online</title>
+    <link rel="stylesheet" href="/CSS/cesta/cesta.css">
+    <link rel="stylesheet" href="/CSS/cesta/op.css">
 </head>
 
 <body>
-    <!--Fondo-->
-    <div>
-        <ul>
-            <li>VISA</li>
-            <li>Paypal</li>
-            <li>Giftcard</li>
-        </ul>
+    <!--Parte de arriba-->
+    <div class="recuadro">
+        <div class="cabecera">
+            <p class="t-cabecera">Formas de pago: Online</p>
+        </div>
+        <div class="centro">
+            <ul>
+                <li class="pago">VISA</li>
+                <li class="pago">Paypal</li>
+                <li class="pago">Giftcard</li>
+            </ul>
+        </div>
     </div>
 </body>
