--- a/web/Cesta/opFecha.html
+++ b/web/Cesta/opFecha.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>Elegir fechas</title>
-    <link rel="stylesheet" href="/CSS/catalogo.css">
+    <link rel="stylesheet" href="/CSS/cesta/cesta.css">
+    <link rel="stylesheet" href="/CSS/cesta/op.css">
 </head>
+
 <body>
-    <!--Fondo-->
-    <div>
-        <!--izquierda-->
-        <div>
+    <!--Parte de arriba-->
+    <div class="recuadro">
+        <div class="cabecera">
+            <p class="t-cabecera">Fechas de entrega</p>
+        </div>
+
+        <!--Izquierda-->
+        <div class="fecha f-izq" id="calendario1">
             Fechas
         </div>
+
         <!--derecha-->
-        <div>
+        <div class="fecha f-der" id="calendario2">
             Fechas
         </div>
     </div>
