--- a/web/CódigoReutilizable/footer.html
+++ b/web/CódigoReutilizable/footer.html
@@ -1,5 +1,5 @@
-<footer style="background-color: #b6b6b6; padding: 0; margin: 0">
-    <p id="footer" style="text-align: center;">Página web desarrollada por Aitana y Cristóbal<br/>
-    Copyrigth@Aitana&Cristóbal<br/>
-    Esta página web está aprobadisima.</p>
+<footer>
+    <p id="footer" name="footer">Página web desarrollada por Aitana y Cristóbal
+        <br/> Copyrigth@Aitana&Cristóbal
+        <br/> Esta página web está aprobadisima.</p>
 </footer>
