--- a/web/CódigoReutilizable/header.html
+++ b/web/CódigoReutilizable/header.html
@@ -1,9 +1,21 @@
 <header>
-    <!--Nombre de la tienda-->
-    <div>Nombre</div>
-    <!--Parte del usuario-->
-    <div>
-        <p id="nombre">Nombre de usuario</p>
-        <p><img src="/img/Logos/Usuario.png" height="25" width="25"></p>
+    <div class="c-fondo">
+        <!--Nombre de la tienda-->
+        <div class="nombre">Nombre</div>
+
+        <!--Parte del usuario-->
+        <div>
+            <img src="/img/Logos/Usuario.png" class="foto-u" height="25" width="25">
+            <p id="nombreUser" class="userName">Nombre de usuario</p>
+        </div>
+
+        <!--Separación-->
+        <sep class="sep"></sep>
+
+        <!--Carrito-->
+        <div>
+            <img src="/img/Logos/carrito.jpg" class="foto-c" height="25" width="25">
+            <p class="c-nombre">Carrito</p>
+        </div>
     </div>
 </header>
