--- a/web/categorias.html
+++ b/web/categorias.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>Categorías</title>
     <link rel="stylesheet" href="/CSS/catalogo.css">
+    <link rel="stylesheet" href="/CSS/header_footer/footer.css">
+    <link rel="stylesheet" href="/CSS/header_footer/header.css">
 </head>
+
+<header>
+    <div class="c-fondo">
+        <!--Nombre de la tienda-->
+        <div class="nombre">Nombre</div>
+
+        <!--Parte del usuario-->
+        <div>
+            <img src="/img/Logos/Usuario.png" class="foto-u" height="25" width="25">
+            <p id="nombreUser" class="userName">Nombre de usuario</p>
+        </div>
+
+        <!--Separación-->
+        <sep class="sep"></sep>
+
+        <!--Carrito-->
+        <div>
+            <img src="/img/Logos/carrito.jpg" class="foto-c" height="25" width="25">
+            <p class="c-nombre">Carrito</p>
+        </div>
+    </div>
+</header>
+
 <body>
     <!--Parte de la izquierda-->
     <div>
@@ -19,3 +45,9 @@
     <!--Parte del fondo "animado"-->
     <div>Fondo</div>
 </body>
+
+<footer>
+    <p id="footer" name="footer">Página web desarrollada por Aitana y Cristóbal
+        <br/> Copyrigth@Aitana&Cristóbal
+        <br/> Esta página web está aprobadisima.</p>
+</footer>
