--- a/web/Cesta/opCompraTienda.html
+++ b/web/Cesta/opCompraTienda.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title>Recogida en Tienda</title>
-    <link rel="stylesheet" href="/CSS/catalogo.css">
+    <link rel="stylesheet" href="/CSS/cesta/cesta.css">
+    <link rel="stylesheet" href="/CSS/cesta/op.css">
 </head>
+
 <body>
-    <!--Fondo-->
-    <div>
-        <p>Efectivo</p>
-        <ul>
-            <li>VISA</li>
-            <li>Paypal</li>
-            <li>Giftcard</li>
-        </ul>
+    <!--Parte de arriba-->
+    <div class="recuadro">
+        <div class="cabecera">
+            <p class="t-cabecera">Formas de pago: Tienda</p>
+        </div>
+        <div class="centro">
+            <ul>
+                <li class="pago">Efectivo</li>
+                <li class="pago">VISA</li>
+                <li class="pago">Paypal</li>
+                <li class="pago">Giftcard</li>
+            </ul>
+        </div>
     </div>
 </body>
