--- a/web/Pestaña Objeto/objEmpresa.html
+++ b/web/Pestaña Objeto/objEmpresa.html
@@ -1,33 +1,59 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <title id="ObjName"></title>
     <link rel="stylesheet" href="/CSS/catalogo.css">
+    <link rel="stylesheet" href="/CSS/header_footer/footer.css">
+    <link rel="stylesheet" href="/CSS/header_footer/header.css">
 </head>
+<header>
+    <div class="c-fondo">
+        <!--Nombre de la tienda-->
+        <div class="nombre">Nombre</div>
+
+        <!--Parte del usuario-->
+        <div>
+            <img src="/img/Logos/Usuario.png" class="foto-u" height="25" width="25">
+            <p id="nombreUser" class="userName">Nombre de usuario</p>
+        </div>
+
+        <!--Separación-->
+        <sep class="sep"></sep>
+
+        <!--Carrito-->
+        <div>
+            <img src="/img/Logos/carrito.jpg" class="foto-c" height="25" width="25">
+            <p class="c-nombre">Carrito</p>
+        </div>
+    </div>
+</header>
+
 <body>
     <div>
         <!--Div imagen-->
-        <div>
-            <img src="/img/Objeto/Img_pruebas1.jpg" id="idImg3" width="450" height="600"/>
+        <div class="izq">
+            <img src="/img/Objeto/Img_pruebas1.jpg" id="idImg3" width="450" height="600" />
         </div>
 
         <!--Div información-->
-        <div>
+        <div class="der">
             <!--Nombres e ids-->
             <div>
                 <p id="objName">Nombre del objeto</p>
-                ID: <p id="idImg3">3</p>
+                ID:
+                <p id="idImg3">3</p>
                 <p id="empresa">ULPGC S.A.</p>
             </div>
 
             <!--Fotos de otros colores-->
             <div>
-                <img src="/img/Objeto/img1.jpg" id="altImg3_1" width="120" height="121"/>
-                <img src="/img/Objeto/img2.jpg" id="altImg3_2" width="120" height="121"/>
-                <img src="/img/Objeto/img3.jpg" id="altImg3_3" width="120" height="121"/>
-                <img src="/img/Objeto/img4.jpg" id="altImg3_4" width="120" height="121"/>
-                <img src="/img/Objeto/img5.jpg" id="altImg3_5" width="120" height="121"/>
-                <img src="/img/Objeto/img6.jpg" id="altImg3_6" width="120" height="121"/>
+                <img src="/img/Objeto/img1.jpg" id="altImg3_1" width="120" height="121" />
+                <img src="/img/Objeto/img2.jpg" id="altImg3_2" width="120" height="121" />
+                <img src="/img/Objeto/img3.jpg" id="altImg3_3" width="120" height="121" />
+                <img src="/img/Objeto/img4.jpg" id="altImg3_4" width="120" height="121" />
+                <img src="/img/Objeto/img5.jpg" id="altImg3_5" width="120" height="121" />
+                <img src="/img/Objeto/img6.jpg" id="altImg3_6" width="120" height="121" />
             </div>
 
             <!--Tallas y fav-->
@@ -42,7 +68,7 @@
                 </select>
                 <div><a href="">Guia de tallas</a></div>
             </div>
-            
+
             <!--Añadir al carrito con las opciones seleccionadas-->
             <div>
                 <input type="button" id="addCarrito" value="Añadir al carrito">
@@ -50,6 +76,12 @@
             </div>
         </div>
     </div>
-    
+
 </body>
+<footer>
+    <p id="footer" name="footer">Página web desarrollada por Aitana y Cristóbal
+        <br/> Copyrigth@Aitana&Cristóbal
+        <br/> Esta página web está aprobadisima.</p>
+</footer>
+
 </html>
