--- a/web/Pestaña Objeto/objParticular.html
+++ b/web/Pestaña Objeto/objParticular.html
@@ -3,7 +3,8 @@
 
 <head>
     <title id="ObjName">Nombre del objeto</title>
-    <link rel="stylesheet" href="/CSS/catalogo.css">
+    <link rel="stylesheet" href="/CSS/inicio.css">
+    <link rel="stylesheet" href="/CSS/objeto.css">
     <link rel="stylesheet" href="/CSS/header_footer/footer.css">
     <link rel="stylesheet" href="/CSS/header_footer/header.css">
 </head>
@@ -39,7 +40,7 @@
         <!--Div información-->
         <div class="der">
             <!--Nombres e ids-->
-            <div>
+            <div class="izq">
                 <p id="objName">Nombre del objeto</p>
                 ID:
                 <p id="idImg1">1</p>
