Changes en Objetos
He intentado hacer ciertos cambios en las pantallas de los objetos para que se vea lo más parecido posible al figma

--- a/web/CódigoReutilizable/header.html
+++ b/web/CódigoReutilizable/header.html
@@ -5,8 +5,10 @@
 
         <!--Parte del usuario-->
         <div>
-            <img src="/img/Logos/Usuario.png" class="foto-u" height="25" width="25">
-            <p id="nombreUser" class="userName">Nombre de usuario</p>
+            <a href="">
+                <img src="/img/Logos/Usuario.png" class="foto-u" height="25" width="25">
+                <p id="nombreUser" class="userName">Nombre de usuario</p>
+            </a>
         </div>
 
         <!--Separación-->
