--- a/web/Pestaña Objeto/objEmpresa.html
+++ b/web/Pestaña Objeto/objEmpresa.html
@@ -33,8 +33,8 @@
     </header>
     <div>
         <!--Div imagen-->
-        <div class="izq img">
-            <img src="/img/Objeto/Img_pruebas1.jpg" class="img" id="idImg3" />
+        <div class="izq">
+            <img src="/img/Objeto/Img_pruebas1.jpg" class="img" id="mainImg" />
         </div>
 
         <!--Div información-->
@@ -51,22 +51,22 @@
             <!--Fotos de otros colores-->
             <div class="flex">
                 <div>
-                    <img src="/img/Objeto/img1.jpg" id="altImg3_1" class="opcion" />
+                    <img src="/img/Objeto/img1.jpg" id="altImg1" class="opcion" />
                 </div>
                 <div>
-                    <img src="/img/Objeto/img2.jpg" id="altImg3_2" class="opcion" />
+                    <img src="/img/Objeto/img2.jpg" id="altImg2" class="opcion" />
                 </div>
                 <div>
-                    <img src="/img/Objeto/img3.jpg" id="altImg3_3" class="opcion" />
+                    <img src="/img/Objeto/img3.jpg" id="altImg3" class="opcion" />
                 </div>
                 <div>
-                    <img src="/img/Objeto/img4.jpg" id="altImg3_4" class="opcion" />
+                    <img src="/img/Objeto/img4.jpg" id="altImg4" class="opcion" />
                 </div>
                 <div>
-                    <img src="/img/Objeto/img5.jpg" id="altImg3_5" class="opcion" />
+                    <img src="/img/Objeto/img5.jpg" id="altImg5" class="opcion" />
                 </div>
                 <div>
-                    <img src="/img/Objeto/img6.jpg" id="altImg3_6" class="opcion" />
+                    <img src="/img/Objeto/img6.jpg" id="altImg5" class="opcion" />
                 </div>
             </div>
 
