--- a/web/catalogo.html
+++ b/web/catalogo.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer style="position: inherit;">
         <p id="footer" name="footer">Página web desarrollada por Aitana y Cristóbal
             <br/> Copyrigth@Aitana&Cristóbal
             <br/> Esta página web está aprobadisima.</p>
