--- a/web/CódigoReutilizable/header.perfil.html
+++ b/web/CódigoReutilizable/header.perfil.html
@@ -4,7 +4,13 @@
         <div class="nombre">
             <p>Nombre</p>
         </div>
-
+        <div  class="izq full">
+            <ul>
+                <li><a href="/web/PerfilUsuario/Inicio.html">Perfil</a></li>
+                <li><a href="/web/PerfilUsuario/Compras.html">Compras</a></li>
+                <li><a href="/web/PerfilUsuario/Ventas.html">Vender</a></li>
+            </ul>
+        </div>
         <!--Parte del usuario-->
         <div>
             <a href="/web/PerfilUsuario/Inicio.html">
