--- a/web/PerfilUsuario/Venta-Particular.html
+++ b/web/PerfilUsuario/Venta-Particular.html
@@ -3,44 +3,51 @@
 <head>
     <meta charset="utf-8">
     <title>Introducir una venta</title>
+    
+    <link rel="stylesheet" href="/CSS/inicio.css">
+    <link rel="stylesheet" href="/CSS/header_footer/header.css">
+    <link rel="stylesheet" href="/CSS/header_footer/header_perfil.css">
+    <link rel="stylesheet" href="/CSS/header_footer/footer.css">
+    <link rel="stylesheet" href="/CSS/perfil/perfil.css">
+    <link rel="stylesheet" href="/CSS/perfil/venta.css">
 </head>
-<header>
-    <div class="header">
-        <div>Nombre</div>
-        <a href="/web/PerfilUsuario/Inicio.html">Inicio</a>
-        <a href="/web/PerfilUsuario/Ventas.html">Ventas</a>
-        <a href="/web/PerfilUsuario/Compras.html">Compras</a>
-    </div>
-</header>
 <body>
     <!--Fondo gris-->
-    <div>
-        <form action="">
-            <div>
-                <div>Nombre del objeto</div>
-                <input type="text" placeholder="Maceta">
+    <div class="f-gris top-v v-pad">
+        <form action="addObjeto">
+            <div class="line">
+                <label for="objNombre">Nombre del objeto</label>
+                <input type="text" id="objNombre" placeholder="Maceta">
             </div>
-            <div>
-                <p>Descripción</p>
-                <textarea name="descripcion" id="descripcion" cols="30" rows="10"></textarea>
-            </div><br/>
-            <div>
-                <p>Ubicación</p>
-                <div style="background-color: grey; width: 250px; height: 150px;" id="ubicacion">
-                    mapa
+
+            <div class="full">
+                <div class="line izq">
+                    <label for="descripcion">Descripción</label>
+                    <textarea name="descripcion" id="descripcion" cols="30" rows="10"></textarea>
+                </div>
+                <div class="l-mar line der">
+                    <label for="ubicacion">Ubicación</label>
+                    <div id="ubicacion" class="mapa">
+                        mapa
+                    </div>
                 </div>
             </div><br/>
-            <div>
-                <p>Costo</p><input type="number" id="costo">
-                <p>Más datos</p><input type="text" id="Más datos">
-                <p>Más datos</p><input type="text" id="Más datos2">
-                <p>Etiqueta</p>
-                <select name="etiqueta" id="etiqueta">
-                    <option value="1">Categoría 1</option>
-                    <option value="2">Categoría 2</option>
-                    <option value="3">Categoría 3</option>
-                    <option value="4">Categoría 4</option>
-                </select>
+            <div class="flex">
+                <div class="line">
+                    <label for="costo">Costo</label><input type="number" id="costo">
+                    <label for="Más datos">Más datos</label><input type="text" id="Más datos">
+                    <label for="Más datos">Más datos</label><input type="text" id="Más datos2">
+                    <label for="etiqueta">Etiqueta</label>
+                    <select name="etiqueta" id="etiqueta">
+                        <option value="1">Categoría 1</option>
+                        <option value="2">Categoría 2</option>
+                        <option value="3">Categoría 3</option>
+                        <option value="4">Categoría 4</option>
+                    </select>
+                </div>
+                <div>
+                    fotos
+                </div>
             </div>
         </form>
     </div>
