--- a/web/Pestaña Objeto/objEmpresa.html
+++ b/web/Pestaña Objeto/objEmpresa.html
@@ -13,21 +13,34 @@
     <header>
         <div class="c-fondo">
             <!--Nombre de la tienda-->
-            <div class="nombre">Nombre</div>
-
+            <div class="nombre">
+                <p>Nombre</p>
+            </div>
+    
             <!--Parte del usuario-->
             <div>
-                <img src="/img/Logos/Usuario.png" class="foto-u" height="25" width="25">
-                <p id="nombreUser" class="userName">Nombre de usuario</p>
+                <a href="/web/PerfilUsuario/Inicio.html">
+                    <div class="cuadro">
+                        <img src="/img/Logos/Usuario.png" id="foto-u" class="foto">
+                    </div>
+                    <div>
+                        <p id="nombreUser" class="userName">Nombre de usuario</p>
+                    </div>
+                </a>
             </div>
-
             <!--Separación-->
             <sep class="sep"></sep>
-
+    
             <!--Carrito-->
             <div>
-                <img src="/img/Logos/carrito.jpg" class="foto-c" height="25" width="25">
-                <p class="c-nombre">Carrito</p>
+                <a href="/web/Cesta/cesta.html">
+                    <div  class="cuadro">
+                        <img src="/img/Logos/carrito.jpg" class="foto-c  foto">
+                    </div>
+                    <div>
+                        <p class="c-nombre">Carrito</p>
+                    </div>
+                </a>
             </div>
         </div>
     </header>
@@ -50,28 +63,35 @@
 
             <!--Fotos de otros colores-->
             <div class="flex">
+                <!-- Esto se usará luego para la realización de colores alternativos -->
+                <template>
+                    <img src="/img/Objeto/img2.jpg" id="alt1" class="opcion" />
+                </template>
+
+                <!-- Para que se vea como pretende ser se realiza lo de abajo-->
                 <div>
-                    <img src="/img/Objeto/img1.jpg" id="altImg1" class="opcion" />
+                    <img src="/img/Objeto/img2.jpg" id="alt1" class="opcion" />
                 </div>
                 <div>
-                    <img src="/img/Objeto/img2.jpg" id="altImg2" class="opcion" />
+                    <img src="/img/Objeto/img1.jpg" id="alt2" class="opcion" />
                 </div>
                 <div>
-                    <img src="/img/Objeto/img3.jpg" id="altImg3" class="opcion" />
+                    <img src="/img/Objeto/img3.jpg" id="alt3" class="opcion" />
                 </div>
                 <div>
-                    <img src="/img/Objeto/img4.jpg" id="altImg4" class="opcion" />
+                    <img src="/img/Objeto/img4.jpg" id="alt4" class="opcion" />
                 </div>
                 <div>
-                    <img src="/img/Objeto/img5.jpg" id="altImg5" class="opcion" />
+                    <img src="/img/Objeto/img5.jpg" id="alt5" class="opcion" />
                 </div>
                 <div>
-                    <img src="/img/Objeto/img6.jpg" id="altImg5" class="opcion" />
+                    <img src="/img/Objeto/img6.jpg" id="alt6" class="opcion" />
                 </div>
             </div>
 
+            <br>
             <!--Tallas y fav-->
-            <div class="">
+            <div>
                 Seleccionar talla: <br/>
                 <select name="talla" id="talla">
                     <option value="xs">XS</option>
