--- a/web/catalogo.html
+++ b/web/catalogo.html
@@ -13,21 +13,33 @@
     <header>
         <div class="c-fondo">
             <!--Nombre de la tienda-->
-            <div class="nombre">Nombre</div>
-
+            <div class="nombre">
+                <p>Nombre</p>
+            </div>
             <!--Parte del usuario-->
             <div>
-                <img src="/img/Logos/Usuario.png" class="foto-u" height="25" width="25">
-                <p id="nombreUser" class="userName">Nombre de usuario</p>
+                <a href="/web/PerfilUsuario/Inicio.html">
+                    <div class="cuadro">
+                        <img src="/img/Logos/Usuario.png" id="foto-u" height="25" width="25">
+                    </div>
+                    <div>
+                        <p id="nombreUser" class="userName">Nombre de usuario</p>
+                    </div>
+                </a>
             </div>
-
             <!--Separación-->
             <sep class="sep"></sep>
-
+    
             <!--Carrito-->
             <div>
-                <img src="/img/Logos/carrito.jpg" class="foto-c" height="25" width="25">
-                <p class="c-nombre">Carrito</p>
+                <a href="/web/Cesta/cesta.html">
+                    <div  class="cuadro">
+                        <img src="/img/Logos/carrito.jpg" class="foto-c" height="25" width="25">
+                    </div>
+                    <div>
+                        <p class="c-nombre">Carrito</p>
+                    </div>
+                </a>
             </div>
         </div>
     </header>
